Bug 158047 - FILEOPEN: Gif image not displayed
Summary: FILEOPEN: Gif image not displayed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-11-02 18:35 UTC by Xisco Faulí
Modified: 2023-11-03 19:41 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparsion MSO vs LibreOffice 24.2 master (22.17 KB, image/png)
2023-11-02 18:35 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-11-02 18:35:09 UTC
Created attachment 190625 [details]
Comparsion MSO vs LibreOffice 24.2 master

Steps to reproduce:
1. Open attachment 107216 from bug 132624

-> The gif image is not displayed. See comparison

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9704f61982360ce35983a61cca3fd00bbdf51ab6
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-11-02 18:35:54 UTC
Regression introduced by:

author	Patrick Luby <plubius@neooffice.org>	2023-08-07 12:17:36 -0400
committer	Patrick Luby <plubius@neooffice.org>	2023-08-10 14:01:10 +0200
commit 12fd870113a663dde5ceb38c61f1986a34095d0e (patch)
tree 04982fbf6a4ed1de1fda1346e73385b375e76e52
parent 0d8a5f89bff51480d721395729a67e7b4260aea5 (diff)
tdf#156630 eliminate opaque parts when drawing animated PNG images

Bisected with: bibisect-linux64-24.2

Adding Cc: to Patrick Luby
Comment 2 Patrick (volunteer) 2023-11-02 22:13:18 UTC
(In reply to Xisco Faulí from comment #0)
> Steps to reproduce:
> 1. Open attachment 107216 from bug 132624

Is this the right attachment? I see only one attachment in that bug and it is a screen snapshot.
Comment 3 Xisco Faulí 2023-11-03 08:23:42 UTC
(In reply to Patrick Luby from comment #2)
> (In reply to Xisco Faulí from comment #0)
> > Steps to reproduce:
> > 1. Open attachment 107216 from bug 132624
> 
> Is this the right attachment? I see only one attachment in that bug and it
> is a screen snapshot.

Sorry...
Steps to reproduce:
1. Open attachment 132624 [details] from bug 107216
Comment 4 Patrick (volunteer) 2023-11-03 13:30:46 UTC
(In reply to Xisco Faulí from comment #3)
> Sorry...
> Steps to reproduce:
> 1. Open attachment 132624 [details] from bug 107216

Thanks for the link. I can now reproduce this bug with Skia/Metal, Skia/Raster, and Skia disabled.

I'll need to investigate if there is a way I can fix tdf#156630 without causing this bug.
Comment 5 Commit Notification 2023-11-03 17:33:01 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2a5dac6d75b346a77652dec05cafa6562177d40f

tdf#158047 allow the tdf#157635 fix for palettes with 64 entries

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Patrick (volunteer) 2023-11-03 17:35:20 UTC
I think that I have fixed this bug and the fix should be in tomorrow's (04 November 2023) nightly build.